@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-07T00:39:12Z",
+  "timestamp" : "2024-12-14T00:38:43Z",
   "count_outdated" : 509,
   "uniques_outdated" : 336,
-  "count" : 511,
-  "uniques" : 338,
+  "count" : 512,
+  "uniques" : 339,
   "clones" : [
     {
       "timestamp": "2024-12-05T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-12-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
