@@ -1,3 +1,12 @@
+2024-12-14T00:38:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12325216521 # 509
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-14
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 336 509 / 338 511
+* notice: next accum: outdated-unq outdated-all / unq all: 336 509 / 339 512
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-13]
+
 2024-12-07T00:39:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12208304817 # 502
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-07
